k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyecto-devops-service
  namespace: devops-staging
spec:
  type: ClusterIP
  selector:
    app: proyecto-devops
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
