k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-devops-ingress
  namespace: devops-staging
spec:
  rules:
    - host: proyecto-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proyecto-devops-service
                port:
                  number: 80
